--- a/CBA.CORE/appsettings.Development.json
+++ b/CBA.CORE/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "MailSettings": {
+    "Mail": "shady07chinex@gmail.com",
+    "DisplayName": "Core Banking Application",
+    "Password": "dixmmzlhtjpsklnh",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
