--- a/CBA.CORE/appsettings.json
+++ b/CBA.CORE/appsettings.json
@@ -10,5 +10,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "MailSettings": {
+    "Mail": "shady07chinex@gmail.com",
+    "DisplayName": "Core Banking Application",
+    "Password": "dixmmzlhtjpsklnh",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  }
 }
