adding new models

--- a/CBA.CORE/appsettings.Development.json
+++ b/CBA.CORE/appsettings.Development.json
@@ -10,7 +10,7 @@
   "MailSettings": {
     "Mail": "shady07chinex@gmail.com",
     "DisplayName": "Core Banking Application",
-    "Password": "Dreecast#7",
+    "Password": "dixmmzlhtjpsklnh",
     "Host": "smtp.gmail.com",
     "Port": 587
   }
