--- a/CBA.Services/CBA.Services.csproj
+++ b/CBA.Services/CBA.Services.csproj
@@ -13,6 +13,7 @@
     <None Remove="MailKit" />
     <None Remove="MimeKit" />
     <None Remove="Microsoft.AspNetCore.Http" />
+    <None Remove="Microsoft.NETCore.App" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
@@ -21,6 +22,7 @@
     <PackageReference Include="MailKit" Version="3.2.0" />
     <PackageReference Include="MimeKit" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Implementations\" />
