--- a/CBA.DATA/CBA.DATA.csproj
+++ b/CBA.DATA/CBA.DATA.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="MailKit" Version="3.2.0" />
     <PackageReference Include="MimeKit" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CBA.WebApi\CBA.Core.csproj" />
