--- a/CBA.Services/CBA.Services.csproj
+++ b/CBA.Services/CBA.Services.csproj
@@ -14,6 +14,7 @@
     <None Remove="MimeKit" />
     <None Remove="Microsoft.AspNetCore.Http" />
     <None Remove="Microsoft.NETCore.App" />
+    <None Remove="Microsoft.EntityFrameworkCore.Relational" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
@@ -22,7 +23,8 @@
     <PackageReference Include="MailKit" Version="3.2.0" />
     <PackageReference Include="MimeKit" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-    <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
+    <PackageReference Include="Microsoft.NETCore.App" Version="$(RuntimeFrameworkVersion)" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Implementations\" />
