--- a/CBA.DATA/CBA.DATA.csproj
+++ b/CBA.DATA/CBA.DATA.csproj
@@ -17,11 +17,13 @@
     <None Remove="MimeKit" />
     <None Remove="Microsoft.AspNetCore.Http" />
     <None Remove="Microsoft.EntityFrameworkCore.Relational" />
+    <None Remove="Logic\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
     <Folder Include="Implementations\" />
     <Folder Include="Migrations\" />
+    <Folder Include="Logic\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
@@ -34,7 +36,8 @@
     <PackageReference Include="MailKit" Version="3.2.0" />
     <PackageReference Include="MimeKit" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-    <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
+    <PackageReference Include="Microsoft.NETCore.App" Version="$(RuntimeFrameworkVersion)" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CBA.WebApi\CBA.Core.csproj" />
