--- a/CBA.CORE/CBA.WebApi.csproj
+++ b/CBA.CORE/CBA.WebApi.csproj
@@ -47,6 +47,9 @@
     <None Remove="Views\GLCategories\" />
     <None Remove="Views\GLAccount\" />
     <None Remove="Views\Tellers\" />
+    <None Remove="Views\CustomerAccount\" />
+    <None Remove="Views\AccountTypeManagements %28copy%29\" />
+    <Content Remove="Views\AccountTypeManagements %28copy%29\Edit.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -70,6 +73,8 @@
     <Folder Include="Views\GLCategories\" />
     <Folder Include="Views\GLAccount\" />
     <Folder Include="Views\Tellers\" />
+    <Folder Include="Views\CustomerAccount\" />
+    <Folder Include="Views\AccountTypeManagements\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
